fix contrast

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
   font-style: normal;
   margin: 0;
   padding: 0;
-  --myblue: #10a3c7;
+  --myblue: #0a7e9b;
+  /* #10a3c7; */
 }
 
 h1 {
@@ -17,16 +18,15 @@ h1, h2, h3 {
 }
 
 a:link {
-    text-decoration: none;
-    color: #0000cd;
+    color: #ffffff;
 }
 
 a:visited {
-    color: #0000cd;
+    color: #ffffff;
 }
 
 a:hover {
-    text-decoration: underline;
+    color:#8be6fd;
 }
 
 a:active {
@@ -98,7 +98,7 @@ body {
     padding: 1rem 15px;
     background-color: white;
     color: black;
-    border-top:#10a3c7 solid 6px;
+    border-top: var(--myblue) solid 6px;
 }
 
 .card {
@@ -110,6 +110,10 @@ body {
 .card, img {
     width: 100%;
     display: block;
+}
+
+.card div h3 a {
+    color: #1013c7;
 }
 
 .image-container {
@@ -220,9 +224,10 @@ body {
 .attributions {
     padding: 5px 1rem;
     justify-content: start;
-    font-size: 10px;
+    font-size: 16px;
     width: 45%;
 }
+
 .attributions p {
     padding: 5px 0px;
     Font-weight: 800;
